--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "swiper": "^8.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
