--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^1.4.1",
     "react-scripts": "^2.1.3",
     "swiper": "^8.4.4"
   },
